<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:orientation="vertical">

    <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TableRow>

            <TextView
                    android:text="@string/country"
                    android:layout_weight="1"
                    android:textSize="18sp"/>

            <EditText
                    android:autofillHints="@string/txt_name"
                    android:id="@+id/txt_name"
                    android:text="@string/txt_name"
                    android:layout_weight="4"
                    tools:ignore="UnusedAttribute"
                    android:hint="@string/country"
                    android:inputType="textAutoComplete"/>
        </TableRow>

        <TableRow>

            <TextView
                    android:text="@string/txt_capital"
                    android:layout_weight="1"
                    android:textSize="18sp"/>

            <EditText
                    android:autofillHints="@string/txt_capital"
                    android:id="@+id/txt_capital"
                    android:text="@string/txt_capital"
                    android:layout_weight="4"
                    tools:ignore="UnusedAttribute"
                    android:hint="@string/txt_capital"
                    android:inputType="textAutoComplete"/>
        </TableRow>

        <TableRow>

            <TextView
                    android:text="@string/txt_surface"
                    android:layout_weight="1"
                    android:textSize="18sp"/>

            <EditText
                    android:autofillHints="@string/txt_surface"
                    android:id="@+id/txt_surface"
                    android:text="@string/txt_surface"
                    android:layout_weight="3"
                    tools:ignore="UnusedAttribute"
                    android:hint="@string/txt_surface"
                    android:gravity="end"
                    android:paddingEnd="10dp"
                    android:paddingStart="10dp"
                    android:inputType="numberDecimal"/>

            <TextView
                    android:text="@string/txt_surface_unit"
                    android:layout_weight="1"
                    android:textSize="18sp"/>
        </TableRow>

        <TableRow>

            <TextView
                    android:text="@string/txt_population"
                    android:layout_weight="1"
                    android:textSize="18sp"/>
            <EditText
                    android:autofillHints="@string/txt_population"
                    android:id="@+id/txt_population"
                    android:text="@string/txt_population"
                    android:layout_weight="4"
                    tools:ignore="UnusedAttribute"
                    android:hint="@string/txt_population"
                    android:inputType="numberDecimal"/>
        </TableRow>
    </TableLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <Button
                android:id="@+id/bt_cancel"
                android:text="@string/txt_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                style="@style/Widget.AppCompat.Button"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:layout_marginStart="20dp"/>

        <Button
                android:id="@+id/bt_ok"
                android:text="@string/txt_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                style="@style/Widget.AppCompat.Button"
                android:enabled="false"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:layout_marginStart="20dp"/>

    </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>